--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^4.4.13",
+    "astro-icon": "^1.1.5",
     "clsx": "^2.1.0",
     "fuse.js": "^7.0.0",
+    "lucide-astro": "^0.511.0",
     "sharp": "^0.33.2",
     "solid-js": "^1.8.15",
     "tailwind-merge": "^2.2.1",
