--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "astro-sphere",
+  "name": "astro-portfolio",
   "type": "module",
   "version": "1.0.0",
   "scripts": {
@@ -21,6 +21,8 @@
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/solid-js": "^4.0.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@solid-primitives/scheduled": "^1.5.1",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.10",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -36,6 +38,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/react": "^19.1.4"
   }
 }
