feat: Update achievement certificates and project structure
This commit includes:
- Updated certificate image paths for Sololearn HTML, JavaScript, Python, Java, and C++ achievements.
- Removed Sololearn PHP, SQL, and SOLID Principles achievement entries.
- Added new achievement components, pages, and certificate images.
- General project updates including package dependencies and configuration files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "paths": {
       "@*": [
         "src/*"
+      ],
+      "solid-slider": [
+        "./node_modules/solid-slider/dist/index.d.ts"
       ]
     },
     "jsx": "preserve",
