--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-astro": "^0.511.0",
     "sharp": "^0.33.2",
     "solid-js": "^1.8.15",
+    "solid-ui": "^2.5.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
